--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^14.1.1",
     "contentful-management": "^5.23.0",
     "gatsby": "^2.20.12",
     "gatsby-image": "^2.3.1",
