add loading animation

--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-transformer-sharp": "^2.4.3",
     "lodash": "^4.17.19",
+    "lottie-web": "^5.7.1",
+    "mobx": "^5.15.5",
+    "mobx-react": "^6.2.5",
     "prop-types": "^15.7.2",
     "querystring": "^0.2.0",
     "react": "^16.12.0",
